[metadata]
name = rectvision
version = 0.1.23
author = Rectlabs
author_email = rectanglenet@gmail.com
description = Rectvision package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rectlabs/rectvision
project_urls =
    Bug Tracker = https://github.com/rectlabs/rectvision/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    importlib-metadata
    boto3 
    dtw 
    h5py 
    imgviz 
    keras 
    labelme 
    matplotlib 
    moviepy 
    numpy 
    opencv-contrib-python 
    PyYAML 
    sklearn
    tensorflow 

[options.packages.find]
where = src