[metadata]
name = rectvision
version = 3.0.9
author = Rectlabs
author_email = rectanglenet@gmail.com
description = Rectvision package
long_description = file: project_description.md
long_description_content_type = text/markdown
url = https://github.com/rectlabs/rectvision
project_urls =
    Bug Tracker = https://github.com/rectlabs/rectvision/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    importlib-metadata
    boto3 == 1.22.9
    dtw == 1.4.0
    labelme == 5.0.1
    moviepy == 1.0.3
    numpy == 1.20.0
    PyJWT == 2.4.0
    python-dotenv == 0.19.2
    PyYAML == 5.4.1
    opencv-contrib-python  == 4.6.0.66
    sklearn


[options.packages.find]
where = src